config file .env
npm run  start with ./server.js in file package.json
add url in file config/server.js

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,45 @@
-HOST=0.0.0.0
-PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-JWT_SECRET=tobemodified
+
+#### Host ####
+
+## Host name ❗️ Mandatory ##
+HOST=127.0.0.1
+
+## Port on which the server should be running. ❗️ Mandatory ##
+NODE_PORT=80
+
+#### Public url of the server.
+
+#### Required for many different features (ex: reset password, third login providers etc.).   ####
+#### Also enables proxy support such as Apache or Nginx, example: https://mywebsite.com/api.  ####
+#### The url can be relative, if so, it is used with http://${host}:${port} as the base url.  ####
+#### An absolute url is however recommended. ####
+
+PUBLIC_URL=api.build-my-app.com
+
+
+#### Keys & Tokens ❗️ Mandatory ####
+APP_KEYS=/C0HHO64dUkO/6OM1DaoCQ==,so8tcGQVaThzv3cOygreFA==,X1RvmhoK6anAJF/bXLD3Ig==,HGRiUhBGRK/5m/Uj3JqVBQ==
+API_TOKEN_SALT=6IHOFSdhLpUUuZTrktCoLw==
+ADMIN_JWT_SECRET=yyEfBHlsmoyhsUKJLizG0Q==
+JWT_SECRET=RJ4styMLSMKWIZOAfAQRiQ==
+
+
+
+#### Database ####
+
+DATABASE_HOST= 127.0.0.1
+DATABASE_PORT= 3306
+DATABASE_NAME= hmtvgttq_teststrapi
+DATABASE_USERNAME= hmtvgttq_strapi
+DATABASE_PASSWORD= 3f!3h@0f^3BfBQ0^@C
+DATABASE_SSL= false
+
+
+###### Type of environment where the application is running. ######
+
+## Launch the server: ##
+NODE_ENV=production npm run build
+
+## Run the server with the production settings: ##
+NODE_ENV=production npm start
+
